
- #14024: Fix unterminated-string-initialization warnings from the C compiler.
  (Antonin Décimo, review by David Allsopp and Miod Vallat)

- #14094: toplevel, simplify check on installed printer types
  (Florian Angeletti, review by Gabriel Scherer)

- #13656: Use C99 stdint.h/inttypes.h fixed-width integer types and
  macros to define OCaml integers.
  (Antonin Décimo, review by Nick Barnes)

### Build system:

- #13810: Support build of cross compilers to native freestanding targets
  (Samuel Hym, review by Antonin Décimo and Romain Calascibetta)

### Bug fixes:

- #14071: Fix exception name in Dynlink.Error printer.
  (Etienne Millon, review by Nicolás Ojeda Bär)

- #13853: Format breaks some line too early when there
  is a break hint at the end.
  (Florian Angeletti, review by Gabriel Scherer)

- #10570: Fix handling of caml_sys_argv when exposed directly as an
  external
  (Keryan Didier, review by Vincent Laviron and Gabriel Scherer)

OCaml 5.4.0
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- #13097: added immutable arrays (`'a iarray` type, Iarray stdlib module)
  (Antal Spector-Zabusky and Olivier Nicole, review by Gabriel Scherer,
  Jeremy Yallop and Vincent Laviron)

- #13340: Array literal syntax [| e1; ...; en |] can now be used to
  denote values of type `'a array` and `'a iarray` and `floatarray`,
  both in expressions and patterns. The compiler disambiguates each
  case by using contextual type information (assuming `'a array`
  by default).
  (Nicolás Ojeda Bär, review by Richard Eisenberg, Jeremy Yallop, Jacques
  Garrigue, and Gabriel Scherer)

- #13498: Tuple fields are now optionally labeled:
  `(x:42, y:0)` and `let (~x, ~y) = ... in ...`.
  (Ryan Tjoa and Chris Casinghino, review by Gabriel Scherer, Chris Casinghino,
  and Leo White)

- RFCs#39, #13404: atomic record fields
    `{ ...; mutable readers : int [@atomic]; ... }`