@@ -66,3 +66,25 @@ run {| let foo : type a . a -> a = fun x -> x in foo |}
 let foo : 'a . 'a -> 'a = fun (type a) -> (fun x -> x : a -> a) in foo
 - : unit = ()
 |}]
+
+
+let run s =
+  let pe = Parse.implementation (Lexing.from_string s) in
+  let te,_,_,_,_ = Typemod.type_structure Env.initial pe in
+  let ute = Untypeast.untype_structure te in
+  Format.printf "%a@." Pprintast.structure ute
+;;
+
+[%%expect{|
+val run : string -> unit = <fun>
+|}];;
+
+(* That test would hang before ocaml/ocaml#14105 *)
+run {|type t = (::);; let f (x : t) = match x with (::) -> 4|}
+
+[%%expect{|
+type t =
+  | (::)
+let f (x : t) = match x with | (::) -> 4
+- : unit = ()
+|}]
